DevOrg/force-app/main/default/objects/Product2/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Product Rating.</description>
    <label>Rating</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>