DevOrg/force-app/main/default/objects/Product2/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <description>Product Stock.</description>
    <label>Stock</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>